syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";
package CareerCloud.gRPC;

service SystemCountryCode{
    rpc GetSystemCountryCode(SysCountryIdRequest) returns (SysCountryCodeProto);
    rpc GetAllSystemCountryCode(google.protobuf.Empty) returns(SysCountryCodeArray);
    rpc UpdateSystemCountryCode(SysCountryCodeArray) returns (google.protobuf.Empty);
    rpc CreateSystemCountryCode(SysCountryCodeArray) returns (google.protobuf.Empty);
    rpc DeleteSystemCountryCode(SysCountryCodeArray) returns (google.protobuf.Empty);
}

message SysCountryIdRequest{
    string Id = 1;
}
message SysCountryCodeProto{
    string Code = 1;
    string Name = 2;
}
message SysCountryCodeArray{
    repeated SysCountryCodeProto  SysCountryCode = 1;
}
